log-schemas/27.5/opcua_binary_get_endpoints_description.rst
``opcua_binary_get_endpoints_description`` field reference
----------------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``endpoint_description_link_id`` (string)
     - The endpoint_description_link_id information.

   * - ``endpoint_uri`` (string)
     - The endpoint_uri information.

   * - ``application_uri`` (string)
     - The application_uri information.

   * - ``product_uri`` (string)
     - The product_uri information.

   * - ``encoding_mask`` (integer - count)
     - The encoding_mask information.

   * - ``locale`` (string)
     - The locale information.

   * - ``text`` (string)
     - The text information.

   * - ``application_type`` (integer - count)
     - The application_type information.

   * - ``gateway_server_uri`` (string)
     - The gateway_server_uri information.

   * - ``discovery_profile_uri`` (string)
     - The discovery_profile_uri information.

   * - ``discovery_profile_link_id`` (string)
     - The discovery_profile_link_id information.

   * - ``cert_size`` (integer - count)
     - The cert_size information.

   * - ``server_cert`` (string)
     - The server_cert information.

   * - ``message_security_mode`` (integer - count)
     - The message_security_mode information.

   * - ``security_policy_uri`` (string)
     - The security_policy_uri information.

   * - ``user_token_link_id`` (string)
     - The user_token_link_id information.

   * - ``transport_profile_uri`` (string)
     - The transport_profile_uri information.

   * - ``security_level`` (integer - count)
     - The security_level information.
